<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="16dp">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="52dp"
        android:src="@drawable/logo"/>

    <TextView
        android:id="@+id/textViewChangePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/textViewChangePassword"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewPlz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/textViewPlz"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="" />

    <EditText
        android:id="@+id/editTextCurrentPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:background="@drawable/edit_text_border"
        android:hint="@string/editTextCurrentPass"
        android:textColorHint="@color/white"
        android:inputType="textPassword"
        android:padding="16dp"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:fontFamily="sans-serif" />

    <EditText
        android:id="@+id/editTextNewPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:background="@drawable/edit_text_border"
        android:hint="@string/editTextNewPass"
        android:textColorHint="@color/white"
        android:inputType="textPassword"
        android:padding="16dp"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:fontFamily="sans-serif" />

    <EditText
        android:id="@+id/editTextConfirmNewPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:background="@drawable/edit_text_border"
        android:hint="@string/editTextConfirmNewPass"
        android:textColorHint="@color/white"
        android:inputType="textPassword"
        android:padding="16dp"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:fontFamily="sans-serif" />

    <TextView
        android:id="@+id/note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text=""
        android:textColor="@color/white"
        android:textStyle="italic"
        android:textSize="18sp"
        android:layout_marginBottom="12dp"/>

    <Button
        android:id="@+id/buttonSendChange"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/edit_text_border"
        android:text="@string/buttonSendChange"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginBottom="52dp"
        android:background="@drawable/edit_text_border"
        android:text="@string/cancel"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textAllCaps="false" />


</LinearLayout>