<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Logo  -->
    <ImageView
        android:id="@+id/logo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="52dp"
        android:src="@drawable/logo"/>

    <!-- Input cho Full Name -->
    <EditText
        android:id="@+id/editTextSignUpUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/edit_text_border"
        android:hint="@string/editTextSignUpUsername"
        android:textColorHint="@color/white"
        android:inputType="text"
        android:padding="16dp"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <!-- Input cho Email -->
    <EditText
        android:id="@+id/editTextSignUpEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:background="@drawable/edit_text_border"
        android:hint="@string/editTextSignUpEmail"
        android:textColorHint="@color/white"
        android:inputType="textEmailAddress"
        android:padding="16dp"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <!-- Input cho Mật khẩu -->
    <EditText
        android:id="@+id/editTextSignUpPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:background="@drawable/edit_text_border"
        android:hint="@string/editTextPassword"
        android:textColorHint="@color/white"
        android:inputType="textPassword"
        android:padding="16dp"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:fontFamily="sans-serif" />

    <!-- Input cho Repeat Mật khẩu -->
    <EditText
        android:id="@+id/editTextSignUpRepeatPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/edit_text_border"
        android:hint="@string/editTextRepeatPassword"
        android:textColorHint="@color/white"
        android:inputType="textPassword"
        android:padding="16dp"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:fontFamily="sans-serif" />

    <TextView
        android:id="@+id/note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="italic" />

    <!-- Nút đăng ký -->
    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/button_border"
        android:text="@string/buttonRegister"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textAllCaps="false" />

    <!-- Liên kết đăng nhập tài khoản -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textViewSignIn"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/textViewSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:focusable="true"
            android:clickable="true"
            android:text="@string/buttonConfirmSignIn"
            android:textColor="#7CC1EF" />
    </LinearLayout>

</LinearLayout>